# ML-DL-Project1

./: .gitignore  README.md  mldl_project1_emotion_cnn.py  mldl_project1_face_classification_cnn.ipynb  part1.py  part2.py  pyproject.toml  pyrightconfig.json  run.py  test_part1.py  test_part2.py
docs/: report.md  requirements.md
project1/: cnn.py  cnn_old.py  constants.py  convereter.py  converter.py  dataset.py  hyperparameters.py  model.py  setup_part1_data.py  setup_part2_data.py  split_data.py  test.py  test_part2.py  unzip.py  utils.py
project1/old/: cnn_old.py  converter.py  split_data.py
