[project]
name = "project1"
version = "0.1.0"
description = ""
authors = [{ name = "=", email = "ngstafford1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy",
  "tensorflow",
  "scikit-image",
  "opencv-python",
  "matplotlib",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
