[project]
name = "project1"
version = "0.1.0"
description = ""
authors = [{ name = "=", email = "ngstafford1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy",
  "scikit-image",
  "opencv-python",
  "matplotlib",
  "pydot (>=3.0.4,<4.0.0)",
  "graphviz (>=0.20.3,<0.21.0)",
  "tensorflow[and-cuda] (>=2.19.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
